<resources>
    <!-- Base application -->
    <string name="app_name">StudyLink</string>
    <string name="logo_desc">Event Image</string>
    <string name="welcome_message">Welcome to Study Link!</string>
    <string name="go_to_profile">Go to Profile</string>
    <string name="user_details">User: John Doe, Interests: Android Dev, AI</string>

    <!-- Event Strings -->
    <string name="create_event">Create Event</string>
    <string name="event_title">Event Title:</string>
    <string name="event_title_hint">Enter event title</string>
    <string name="event_description">Event Description:</string>
    <string name="event_description_hint">Enter event description</string>
    <string name="upload_event_image">Upload Event Image</string>
    <string name="event_image_description">Event location image</string>
    <string name="event_date_time">Event Date and Time:</string>
    <string name="event_location">Event Location:</string>

    <!-- Login Strings -->
    <string name="go_back">Go Back</string>
    <string name="signup_label">Sign Up</string>
    <string name="password_hint">Enter your password</string>
    <string name="signup_button">Create Account</string>
    <string name="send_button">Send</string>
    <string name="join_event">Join Event</string>
    <string name="location_header">Find Event Location</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="pick_date">Pick Date</string>
    <string name="select_event_time">Select Event Time</string>
    <string name="select_event_date">Select Event Time</string>
    <string name="pick_time">Pick Time</string>
    <string name="create_event_label">Create Event</string>
    <string name="book_icon">Book icon</string>
    <string name="new_user_message">New to Study Link?</string>
    <string name="sign_up_here">SIGN UP HERE</string>

    <!-- Home Screen and Nav -->
    <string name="temp_main_fill">Latest App Updates:\n1. Group messaging added.\n2. Explore nearby events easily.\n3. Profile customization is now available. This page can also show the groups the user has joined, or made</string>
    <string name="greetings_user">GREETINGS, JOHN D.</string>
    <string name="settings_desc">Settings</string>
    <string name="nav_explore">Explore Groups</string>

    <string name="find_groups_label">Find Groups</string>
    <string name="find_groups_icon_desc">Find Groups Icon</string>
    <string name="search_groups_hint">Search Groups</string>
    <string name="group_title">Group Title</string>
    <string name="group_description">Group Description</string>
    <string name="group_location">Group Location</string>
    <string name="group_date_and_time">Group Date And Time</string>
    <string name="group_distance">Group Distance</string>
    <string name="groups_found">Found Groups Near You</string>

    <string name="edit_profile_label">Edit Profile</string>

    <!-- Autofill Hints -->
    <string name="autofill_hint_event_title">event_title</string>
    <string name="autofill_hint_event_description">event_description</string>
    <string name="autofill_hint_event_date">event_date</string>
    <string name="autofill_hint_event_time">event_time</string>
    <string name="autofill_hint_event_location">event_location</string>
    <string name="name_hint">Name</string>
    <string name="email_hint">Email</string>
    <string name="interests_hint">Interests (e.g., Android Dev, AI)</string>
    <string name="contact_link_hint">Contact Link (e.g., Discord)</string>
    <string name="classes_hint">Classes (e.g., CSE 320, Calc 2)</string>
    <string name="bio_hint">Bio</string>

    <!-- Placeholder for formatted -->
    <string name="formatted_date">%1$s/%2$s/%3$s</string>
    <string name="formatted_time">%1$s:%2$s</string>

    <!-- Descriptions -->
    <string name="profile_picture_desc">Profile Picture</string>

    <!-- Buttons -->
    <string name="upload_profile_picture">Upload Profile Picture</string>
    <string name="take_picture">Take Picture</string>
    <string name="save_changes">Save Changes</string>
    <string name="log_out">Log Out</string>


    <!-- Switch Texts -->
    <string name="show_gpa">Show GPA</string>
    <string name="availability_status">Availability Status</string>
    <string name="enable_notifications">Enable Notifications</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

    <string name="use_current_location">Use Current Location</string>
    <string name="navigate_to_location">Navigate to Location</string>



</resources>
